Some refactoring, unauthed players shouldn't see chat